<package>
  <name>telemanip_msgs</name>
  <version>0.1.0</version>
  <maintainer email="jbo@jhu.edu">Jonathan Bohren</maintainer>
  <license>BSD</license>
  <description>
     telemanip_msgs
  </description>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>cartesian_trajectory_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>std_msgs</run_depend>
  <run_depend>cartesian_trajectory_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
</package>


